feat: example cream

--- a/helados-html/helados.html
+++ b/helados-html/helados.html
@@ -6,8 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helados</title>
     <link rel="stylesheet" href="./estilos-helados.css"></link>
+    <style>
+        .icon-audio {
+            color: red;
+            font-size: 40px;
+            width: 40px;
+        }
+    </style>
 </head>
 <body>
+    <i class="fas fa-copy"></i>
+    <i class="icon-audio fas fa-file-audio"></i>
+    <i class="fas fa-angle-down"></i>
+    <i class="fas fa-bars"></i>
+    <i class="fas fa-bullhorn"></i>
     <div class="contenedor">
         <div class="imagen-helados">
             <img src="https://i.pinimg.com/564x/fd/fe/40/fdfe40dddc4928c448a180f1d61f0183.jpg"/>
@@ -20,5 +32,7 @@
             <div class="paleta paleta-5"><h3>#8EB695</h3></div>
         </div>
     </div>
+
+    <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js" integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous"></script>
 </body>
 </html>
