--- a/pato-html/pato.html
+++ b/pato-html/pato.html
@@ -90,18 +90,22 @@
 			</div>
 				<div class="contenedor3">
 					<h2 class="tercer-sub">Frequently Asked Questions</h2>
+					<div id="demo"></div>
 					<div class="listas-text">
-						<ol style= "list-style-type: none">
-							<li onclick="mostrarRespuesta()" id="pregunta1"><i class="icon-up fas fa-chevron-circle-up"></i>How does DuckDuckGo make money?
-								</br>We make our money from private ads on or search engine.On other search engines,ads are based on profiles compilet about you using your personal information like search,browsing,and purchase history.Since we don't collect that information,search ads on DuckDuckGo are based on the search results  page you are viewing, not on you as a person.For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></li>
-							<li onclick="mostrarRespuesta()" id="pregunta2"></br><i class="icon-down fas fa-chevron-circle-down"></i>Wath does Google know about me?
-								</br>We make our money from private ads on or search engine.On other search engines,ads are based on profiles compilet about you using your personal information like search,browsing,and purchase history.Since we don't collect that information,search ads on DuckDuckGo are based on the search results  page you are viewing, not on you as a person.For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></li>
-							<li onclick="mostrarRespuesta()" id="pregunta3"></br><i class="icon-down fas fa-chevron-circle-down"></i>Why use DuckDuckGo Instead of Google?
-								</br>We make our money from private ads on or search engine.On other search engines,ads are based on profiles compilet about you using your personal information like search,browsing,and purchase history.Since we don't collect that information,search ads on DuckDuckGo are based on the search results  page you are viewing, not on you as a person.For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></li>
-							<li onclick="mostrarRespuesta()"></br><i class="icon-down fas fa-chevron-circle-down"></i>How do DuckDuckGo search results compare to Google's?</li>
-							<li onclick="mostrarRespuesta()"></br><i class="icon-down fas fa-chevron-circle-down"></i>What's the difference between using DuckDuckGo and incognito mode?</li>
-							<li onclick="mostrarRespuesta()"></br><i class="icon-down fas fa-chevron-circle-down"></i>How popular ls DuckDuckGo?</li>
-							<li onclick="mostrarRespuesta()"></br><i class="icon-down fas fa-chevron-circle-down"></i>How does the DuckDuckGo app & extencion work?</li>
+						<ol class="cajaPreguntas" style= "list-style-type: none">
+							<li id="pregunta1" class="li-pregunta"><i class="icon-up fas fa-chevron-circle-up"></i><span>How does DuckDuckGo make money?</span>
+								<p class="ocultarTexto">We make our money from private ads on or search engine.On other search engines,ads are based on profiles compilet about you using your personal information like search,browsing,and purchase history.Since we don't collect that information,search ads on DuckDuckGo are based on the search results  page you are viewing, not on you as a person.For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span> </p></li>
+							<li id="pregunta2" class="li-pregunta"><i class="icon-down fas fa-chevron-circle-down"></i><span>Wath does Google know about me?</span>
+								<p class="ocultarTexto">We make our money from private ads on or search engine.On other search engines,ads are based on profiles compilet about you using your personal information like search,browsing,and purchase history.Since we don't collect that information,search ads on DuckDuckGo are based on the search results  page you are viewing, not on you as a person.For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></p></li>
+							<li id="pregunta3" class="li-pregunta"><i class="icon-down fas fa-chevron-circle-down"></i><span>Why use DuckDuckGo Instead of Google?</span>
+								<p class="ocultarTexto">We make our money from private ads on or search engine.On other search engines,ads are based on profiles compilet about you using your personal information like search,browsing,and purchase history.Since we don't collect that information,search ads on DuckDuckGo are based on the search results  page you are viewing, not on you as a person.For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></p></li>
+							<li id="pregunta4" class="li-pregunta"><i class="icon-down fas fa-chevron-circle-down"></i><span>How do DuckDuckGo search results compare to Google's?</span>
+								<p class="ocultarTexto">For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></p></li>
+							<li id="pregunta5" class="li-pregunta"><i class="icon-down fas fa-chevron-circle-down"></i><span>What's the difference between using DuckDuckGo and incognito mode?</span>
+								<p class="ocultarTexto">For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></p></li>
+							<li id="pregunta6" class="li-pregunta"><i class="icon-down fas fa-chevron-circle-down"></i><span>How popular ls DuckDuckGo?</span></li>
+							<li id="pregunta7" class="li-pregunta"><i class="icon-down fas fa-chevron-circle-down"></i><span>How does the DuckDuckGo app & extencion work?</span>
+								<p class="ocultarTexto">For example, if you search for cars, we'll show you ads about cars. <span class="resaltar">Learn more </span></p></li>
 						</ol>
 					</div>
 						<button class="boton3"><a class="text-boton-final" href="#">Add DuckDuckGo Chrome </a></button>
