agregando estilos a tablas

--- a/tablas/tablas.html
+++ b/tablas/tablas.html
@@ -6,12 +6,12 @@
 	<link rel="stylesheet" href="./estilos-tabla.css"></link>
 </head>
 <body> 
-	<h1>Tablas de Multiplicar</h1>
-	<div id="contenedor"></div>
-	<ol id="colores"></ol>
+	<div id="contenedorPapa">
+		<h1>Tablas de Multiplicar</h1>
+		<div id="contenedor"></div>
 		<h3></h3>
 		<li class="resultado"></li>
-		
+	</div>	
 
 </body>
 <script type="text/javascript" src="./logica.js"></script>
